[package]
name = "moluscoyield"
version = "0.1.0"
description = "On-chain position tracking for MoluscoYield"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "moluscoyield"

[features]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
